set new predictions and delete old

--- a/src/app/components/predict/predict.component.html
+++ b/src/app/components/predict/predict.component.html
@@ -1,7 +1,14 @@
 <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
 <div *ngIf="!isLoading">
-  <div class="old__predictions">
-    <div class="predictions__title">Old Predictions</div>
+  <div class="old__predictions" *ngIf="!showNewPrediction">
+    <div class="predictions__title">Ihre Vorhersagen</div>
+    <div class="old__predictions__date">{{oldPredictions[0].date | date:'medium'}}</div>
+    <div class="old__predictions__buttons">
+      <button mat-raised-button color="primary" (click)="setNewPrediction()">Neue Vorhersage setzen
+        <!--        <span class="button__hint">(Die alte wird gelöscht)</span>-->
+      </button>
+    </div>
+
     <div class="old__predicted__group__container">
       <div *ngFor="let oldGroupPrediction of oldGroupsPrediction; let i = index">
         <app-group-table-predict
@@ -37,43 +44,52 @@
       </div>
     </div>
   </div>
-  <div class="predictions__title">Set new Prediction</div>
-  <div class="predict__groups__container">
-    <div *ngFor="let teamsGroupData of teamsGroupsData; let i = index">
-      <app-group-table-predict [teamsGroupData]="teamsGroupData"
-                               [group]="groups[i]"
-                               (sendGroupName)="receiveGroup($event)"
-                               (sendSelectedTeams)="receiveSelectedTeamsGroups($event)">
-      </app-group-table-predict>
-    </div>
-  </div>
-  <div class="predict__matches__container">
-    <div class="k-o-stage">
-      <div *ngFor="let match of roundOf16Matches">
-        <app-match-predict [match]="match" (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
+  <div class="new__prediction" *ngIf="showNewPrediction">
+    <div class="predictions__title">Set new Prediction</div>
+    <div class="predict__groups__container">
+      <div *ngFor="let teamsGroupData of teamsGroupsData; let i = index">
+        <app-group-table-predict [teamsGroupData]="teamsGroupData"
+                                 [group]="groups[i]"
+                                 (sendGroupName)="receiveGroup($event)"
+                                 (sendSelectedTeams)="receiveSelectedTeamsGroups($event)">
+        </app-group-table-predict>
       </div>
     </div>
-    <div class="k-o-stage">
-      <div *ngFor="let match of quarterFinalsMatches">
-        <app-match-predict [match]="match" (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
+    <div class="predict__matches__container">
+      <div class="k-o-stage">
+        <div *ngFor="let match of roundOf16Matches">
+          <app-match-predict [match]="match"
+                             (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        <div *ngFor="let match of quarterFinalsMatches">
+          <app-match-predict [match]="match"
+                             (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        <div *ngFor="let match of semiFinalsMatches">
+          <app-match-predict [match]="match"
+                             (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        <app-match-predict [match]="thirdPlaceMatch"
+                           (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
+      </div>
+      <div class="k-o-stage">
+        <app-match-predict [match]="finalMatch"
+                           (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
       </div>
     </div>
-    <div class="k-o-stage">
-      <div *ngFor="let match of semiFinalsMatches">
-        <app-match-predict [match]="match" (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
-      </div>
+    <div class="submit__prediction">
+      <button mat-raised-button color="primary" (click)="savePrediction()" [disabled]="saveDisabled">Vorhersagen
+        setzen
+      </button>
+      <!--      TODO -->
+      <button mat-raised-button>Vorhersagen zurücksetzen</button>
+      <button mat-raised-button (click)="showNewPrediction = false">Abbrechen</button>
     </div>
-    <div class="k-o-stage">
-      <app-match-predict [match]="thirdPlaceMatch"
-                         (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
-    </div>
-    <div class="k-o-stage">
-      <app-match-predict [match]="finalMatch"
-                         (selectedWinnerEmitter)="receiveSelectedWinner($event)"></app-match-predict>
-    </div>
-  </div>
-  <div class="submit__prediction">
-    <button mat-raised-button color="primary" (click)="savePrediction()" [disabled]="saveDisabled">Save</button>
-    <button mat-raised-button>Clear Selection</button>
   </div>
 </div>
