--- a/src/app/components/predict/predict.component.scss
+++ b/src/app/components/predict/predict.component.scss
@@ -28,6 +28,27 @@
 }
 
 .submit__prediction button {
-  width: 10rem;
+  width: fit-content;
   margin: 2rem 0;
+}
+
+.old__predictions__date {
+  background-color: #ff7676;
+  padding: 0.5rem;
+  text-align: center;
+  width: fit-content;
+  margin: auto;
+  border-radius: 0.5rem;
+  color: white;
+}
+
+.old__predictions__buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.button__hint {
+  font-size: 0.7rem;
 }
