--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,9 @@ body {
 .team__flag--small {
   height: 1.5rem;
 }
+
+.error__message {
+  background: #ff8d8d;
+  padding: 1rem;
+  text-align: center;
+}
