--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,7 +5,7 @@
   z-index: 1000;
   width: 3rem;
   height: 3rem;
-  background-color: #56042C;
+  background-color: var(--color-1);
   color: white;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -24,6 +24,23 @@
   justify-content: center;
 }
 
+.home__cover {
+  width: 100%;
+  height: 100%;
+}
+
+.home__cover__img {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.groups__section {
+  padding: 2rem 0;
+}
+
 .groups__container {
   display: flex;
   flex-wrap: wrap;
@@ -33,21 +50,11 @@
   margin: auto;
 }
 
-.news__container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-
-}
-
-.predict__matches__container {
+.k-o__matches__container {
   display: flex;
   justify-content: center;
   align-items: center;
-  //flex-direction: column;
-
+  width: 100%;
 }
 
 .k-o-stage {
@@ -57,9 +64,80 @@
   flex-direction: column;
 }
 
+@media screen and (max-width: 650px) {
+  .k-o__matches__container {
+    display: none;
+  }
+}
+
 .matches__news__container {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 2rem;
   margin: 2rem 0;
+  width: 100%;
 }
+
+.matches__filter {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem
+}
+
+.matches__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 560px) {
+  .matches__container {
+    flex-direction: row;
+  }
+}
+
+.news__container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.section__title {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  font-size: 2rem;
+  margin: 1rem auto;
+  padding: 1rem;
+  font-family: 'Montserrat Alternates', sans-serif;
+  background: black;
+  color: white;
+}
+
+.section__divider {
+  margin: 1rem auto;
+  width: 80%;
+  position: relative;
+}
+
+.section__divider .shadow {
+  overflow: hidden;
+  height: 20px;
+}
+
+.section__divider .shadow:after {
+  content: '';
+  display: block;
+  margin: -25px auto 0;
+  width: 100%;
+  height: 25px;
+  border-radius: 125px/12px;
+  box-shadow: 0 0 6px crimson;
+}
+
