--- a/src/app/components/shared/match/match.component.scss
+++ b/src/app/components/shared/match/match.component.scss
@@ -1,6 +1,6 @@
 .match__container {
   display: grid;
-  grid-template-columns: 5rem 7rem 3rem 4rem 1rem 4rem 3rem 7rem 5rem;
+  grid-template-columns: 5rem 5rem 3rem 2rem 1rem 2rem 3rem 5rem 5rem;
   justify-content: center;
   justify-items: center;
   align-items: center;
@@ -8,14 +8,9 @@
   font-family: var(--font--weight--bold);
   background-color: white;
   border-radius: 0.5rem;
-  border: 1px solid #00000026;
+  border: 1px solid var(--border-color);
   padding: 0 0.8rem;
   height: 5rem;
-}
-
-.team__name {
-  text-align: center;
-  vertical-align: center;
 }
 
 .match-round-date {
@@ -25,11 +20,13 @@
 .material-icons {
   font-size: 1rem;
 }
+
 .mat-input-element:disabled {
   color: black;
 }
+
 // Small
-.match__container__small {
+.match__mini, .match__mobile {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,22 +34,22 @@
   font-family: var(--font--weight--bold);
   font-size: 1rem;
   border-radius: 0.5rem;
-  border: 1px solid #00000026;
-  margin: 0.5rem;
+  border: 1px solid var(--border-color);
+  margin: 0.2rem;
   background-color: white;
-  width: 10rem;
+  width: 13rem;
 }
 
-.match__container__small__header {
+.match__container__small__header, .match__mobile__header {
   display: flex;
   justify-content: center;
-  border-bottom: 1px solid #00000026;
+  border-bottom: 1px solid var(--border-color);
   width: 100%;
   gap: 1rem;
   margin-top: 0.3rem;
 }
 
-.match__container__small__main {
+.match__container__small__main, .match__mobile__main {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,6 +59,44 @@
 }
 
 .match-score__input {
-  width: 1rem;
+  width: 2rem;
   text-align: center;
+}
+
+.match__mobile {
+  display: none;
+}
+
+.match__mobile__buttons {
+  display: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .match__mini {
+    width: 8rem;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .match__large {
+    display: none;
+  }
+
+  .match__mobile {
+    display: flex;
+  }
+
+  .match__mobile__buttons {
+    display: block;
+  }
+
+}
+
+.match__mobile__team {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+  width: 100%;
 }
