--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 </button>
 <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
 <div class="home__cover" *ngIf="matches">
-  <img src="assets/header.jpg" alt="" class="home__cover__img">
+  <img src="assets/header.png" alt="" class="home__cover__img">
   <div>button</div>
 </div>
 <div *ngIf="!isLoading && !matches" class="error__message">Daten können nicht geladen werden</div>
