--- a/src/app/components/shared/match/match.component.scss
+++ b/src/app/components/shared/match/match.component.scss
@@ -55,7 +55,7 @@
   align-items: center;
   margin: 0.5rem 0;
   width: 100%;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 
 .match-score__input {
@@ -73,7 +73,21 @@
 
 @media screen and (max-width: 1100px) {
   .match__mini {
-    width: 8rem;
+    width: 10rem;
+  }
+
+  .match__mobile__name {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .match__mini {
+    width: 6rem;
+  }
+
+  .team__flag--small {
+    height: 1rem;
   }
 }
 
