--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,17 @@
 </button>
 <mat-progress-bar mode="indeterminate" *ngIf="isLoading"></mat-progress-bar>
 <div class="home__cover" *ngIf="matches">
-  <img src="assets/header.png" alt="" class="home__cover__img">
-  <div>button</div>
+  <img src="assets/header_logo.png" alt="" class="home__cover__img">
+  <div class="cover__navigation">
+    <div class="cover__navigation__top">
+      <div>Gruppenstände</div>
+      <div>K.o.-Phasen</div>
+    </div>
+    <div class="cover__navigation__bottom">
+      <div>Alle Spiele</div>
+      <div>Nachrichten</div>
+    </div>
+  </div>
 </div>
 <div *ngIf="!isLoading && !matches" class="error__message">Daten können nicht geladen werden</div>
 <div class="home__container" *ngIf="!isLoading && matches">
@@ -19,43 +28,45 @@
   <div class="section__divider">
     <div class="shadow"></div>
   </div>
-  <div class="section__title">K.o.-Phasen</div>
-  <div class="k-o__matches__container" id="k-o-stages_section">
-    <div class="k-o-stage">
-      Round of 16
-      <div class="k-o-stage__match" *ngFor="let match of roundOf16Matches">
-        <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
+  <div class="k-o-stage__section">
+    <div class="section__title">K.o.-Phasen</div>
+    <div class="k-o__matches__container">
+      <div class="k-o-stage">
+        Round of 16
+        <div class="k-o-stage__match" *ngFor="let match of roundOf16Matches">
+          <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        Quarter finals
+        <div *ngFor="let match of quarterFinalsMatches">
+          <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        Semi finals
+        <div *ngFor="let match of semiFinalsMatches">
+          <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        Third place
+        <div>
+          <app-match [match]="thirdPlaceMatch" [stages]="stages" [groupsDetails]="groupsDetails"
+                     [small]="true"></app-match>
+        </div>
+      </div>
+      <div class="k-o-stage">
+        Final
+        <div>
+          <app-match [match]="finalMatch" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true">
+          </app-match>
+        </div>
       </div>
     </div>
-    <div class="k-o-stage">
-      Quarter finals
-      <div *ngFor="let match of quarterFinalsMatches">
-        <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
-      </div>
+    <div class="section__divider">
+      <div class="shadow"></div>
     </div>
-    <div class="k-o-stage">
-      Semi finals
-      <div *ngFor="let match of semiFinalsMatches">
-        <app-match [match]="match" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true"></app-match>
-      </div>
-    </div>
-    <div class="k-o-stage">
-      Third place
-      <div>
-        <app-match [match]="thirdPlaceMatch" [stages]="stages" [groupsDetails]="groupsDetails"
-                   [small]="true"></app-match>
-      </div>
-    </div>
-    <div class="k-o-stage">
-      Final
-      <div>
-        <app-match [match]="finalMatch" [stages]="stages" [groupsDetails]="groupsDetails" [small]="true">
-        </app-match>
-      </div>
-    </div>
-  </div>
-  <div class="section__divider">
-    <div class="shadow"></div>
   </div>
   <div class="matches__news__container">
     <div class="matches__section" id="matches_section">
