--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,24 @@ body {
   text-align: center;
   color: white;
 }
+
+.section__divider {
+  margin: 1rem auto;
+  width: 70%;
+  position: relative;
+}
+
+.section__divider .shadow {
+  overflow: hidden;
+  height: 20px;
+}
+
+.section__divider .shadow:after {
+  content: '';
+  display: block;
+  margin: -25px auto 0;
+  width: 100%;
+  height: 23px;
+  border-radius: 125px/12px;
+  box-shadow: 0 0 6px crimson;
+}
